@@ -1,1 +1,1 @@
-11.5.0-rc2
+11.5.0
